kube/transactor/transactor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: transactor
  name: transactor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactor
  template:
    metadata:
      labels:
        app: transactor
    spec:
      containers:
        - env:
            - name: ACCOUNTS_URL
              value: http://account
            - name: ELASTIC_INDEX_NAME
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: ELASTIC_INDEX_NAME
            - name: ELASTIC_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: ELASTIC_URL
            - name: FRONT_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: FRONT_URL
            - name: MINIO_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: MINIO_ACCESS_KEY
            - name: MINIO_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: MINIO_ENDPOINT
            - name: MINIO_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: MINIO_SECRET_KEY
            - name: MONGO_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: MONGO_URL
            - name: DB_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: MONGO_URL
            - name: REKONI_URL
              value: http://rekoni
            - name: SERVER_CURSOR_MAXTIMEMS
              value: "30000"
            - name: SERVER_PORT
              value: "3333"
            - name: SERVER_PROVIDER
              value: ws
            - name: SERVER_SECRET
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: SERVER_SECRET
          image: getyoutrack/transactor:latest
          name: transactor
          ports:
            - containerPort: 3333
              hostPort: 3333
              protocol: TCP
      restartPolicy: Always
